--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Davi</h1>
+
+    <style>
+        body{
+            background-color: rgb(0, 255, 34); 
+        }
+        body>
+    </style>
+
+    <h1 style="color: rgb(0, 38, 255); text-align: center;">Davi</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam libero eos beatae error ducimus eaque dolorem, ipsa quae debitis. Accusantium maxime dolorem fugiat laudantium deserunt libero voluptas aspernatur minima tempore culpa? Quae magnam ea fugiat, laboriosam nisi quas quos sapiente?</p>
     
