alterei a cor do fundo

--- a/html/interno.html
+++ b/html/interno.html
@@ -9,7 +9,7 @@
     
     <style>
         body{
-            background-color: darkcyan;
+            background-color: rgb(12, 97, 97);
         }
 body
     </style>
