--- a/html/externo.html
+++ b/html/externo.html
@@ -13,6 +13,8 @@
    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex repellat porro deleniti tempore ullam quia quis quibusdam at, voluptas optio praesentium iste vel eos maiores ab facilis illum amet aperiam earum placeat! Tempore eum harum error laudantium exercitationem quo temporibus ullam quam ea consequuntur praesentium provident maxime, velit minus! Ipsam?</P>
    <br><br>
 
+   <h2>CSS Novamente</h2>
+
    <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam minus non praesentium molestiae impedit repudiandae deserunt officiis quia. Repudiandae temporibus incidunt nam doloribus. Ad nesciunt facere ex porro iusto fuga eveniet aperiam, consequuntur in dolore ab veniam corporis rerum soluta, quaerat dolorem fugiat architecto similique nulla voluptatibus quo ipsam illo sapiente? Maxime tenetur voluptatibus optio voluptatum, vel culpa assumenda odio omnis ullam ratione nostrum id unde dolores ea praesentium molestias?
    </p>
