acrecentei outros arquivos no vs code

--- a/html/externo.html
+++ b/html/externo.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Davi</title>
     <link rel="stylesheet" href="/css/aula1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,6 +21,10 @@
    <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam minus non praesentium molestiae impedit repudiandae deserunt officiis quia. Repudiandae temporibus incidunt nam doloribus. Ad nesciunt facere ex porro iusto fuga eveniet aperiam, consequuntur in dolore ab veniam corporis rerum soluta, quaerat dolorem fugiat architecto similique nulla voluptatibus quo ipsam illo sapiente? Maxime tenetur voluptatibus optio voluptatum, vel culpa assumenda odio omnis ullam ratione nostrum id unde dolores ea praesentium molestias?
    </p>
+   <br><br>
+
+   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit id asperiores ullam ducimus numquam laboriosam voluptatibus consequuntur deleniti odit sint fuga quibusdam, sit quos optio. Accusamus nihil eligendi natus! Voluptatibus cumque cum, optio perferendis neque ipsam unde sequi accusamus officia saepe non veritatis assumenda, provident eaque inventore laudantium totam alias.</p>
+
 
 </body>
 </html>
